--- a/kettle.html
+++ b/kettle.html
@@ -7,7 +7,7 @@ function quine() {
 <html>
   <head>
     <script id="bootstrap" type="text/javascript">
-${document.getElementById("bootstrap").innerText}
+${document.getElementById("code").value}
     </scr` + `ipt>
   </head>
   <body>
