--- a/kettle.html
+++ b/kettle.html
@@ -3,6 +3,7 @@
   <head>
     <script id="bootstrap" type="text/javascript">
 
+
 function quine() {
   return `<!DOCTYPE html>
 <html>
@@ -34,10 +35,11 @@ function ready() {
 }
 document.addEventListener("DOMContentLoaded", ready);
     
+    
     </script>
   </head>
   <body>
-    <textarea id="code"></textarea>
+    <textarea id="code" rows="40" cols="80"></textarea>
     <button id="save">Save</button>
   </body>
 </html>
