--- a/kettle.html
+++ b/kettle.html
@@ -33,8 +33,8 @@ function doIframe() {
   document.body.appendChild(br);
 
   let iframe = document.createElement("iframe");
-  iframe.width = "90vw";
-  iframe.height = "90vh";
+  iframe.style.width = "95vw";
+  iframe.style.height = "95vh";
   iframe.srcdoc = quine();
   document.body.appendChild(iframe);
   
