--- a/kettle.html
+++ b/kettle.html
@@ -44,7 +44,7 @@ function htmlToCard(html) {
   card.id = html.id;
   for(const child of Array.from(html.children)) {
     if(child instanceof KettleProp) {
-      card[child["data-prop"]] = child.innerText;
+      card[child.dataset.prop] = child.innerText;
     }
   }
   console.log("parsed card", card);
@@ -65,6 +65,11 @@ function h(elem, attrs, ...children) {
 
   let e = document.createElement(elem);
   recursiveAssign(e, attrs);
+  for(const key of Object.keys(attrs)) {
+    if(key.startsWith("data-")) {
+      e.dataset[key.slice(5)] = attrs[key];
+    }
+  }
   children.flat(Infinity).forEach(child => {
     if(child instanceof HTMLElement) e.appendChild(child);
     else e.appendChild(document.createTextNode(child));
@@ -73,6 +78,8 @@ function h(elem, attrs, ...children) {
 }
 
 function quine() {
+  updateOrAddCard({id: "mycard", key: "value", hello: "world"});
+  
   const htm = h("html", {}, 
     h("head", {},
       h("script", {id: "bootstrap", type: "text/javascript"},
@@ -80,6 +87,10 @@ function quine() {
       )
     ),
     h("body", {},
+      //Cheap hack to prevent card elements from showing thru
+      h("div", {style: { display: "none" }},
+        cardsArray.map(card => cardToHtml(card))
+      ),
       h("textarea", {id: "code", rows: "40", cols: "80", spellcheck: "false"}),
       h("button", {id: "save"}, "Save"),
       h("button", {id: "iframe"}, "Iframe")
@@ -115,11 +126,11 @@ function ready() {
   document.getElementById("save").addEventListener("click", doSave);
   document.getElementById("iframe").addEventListener("click", doIframe);
   
-  const card = {id: "mycard", foo: "bar", baz: 69.420};
-  console.log(card);
-  console.log(cardToHtml(card));
-  console.log(cardToHtml(card).outerHTML);
-  console.log(htmlToCard(cardToHtml(card)));
-  
+  //add all cards
+  Array.from(document.querySelectorAll("kettle-card"))
+    .map(htm => htmlToCard(htm))
+    .forEach(card => updateOrAddCard(card));
+
+  console.log(cardsArray);
 }
 document.addEventListener("DOMContentLoaded", ready);</script></head><body><textarea id="code" rows="40" cols="80" spellcheck="true"></textarea><button id="save">Save</button><button id="iframe">Iframe</button></body></html>
